@@ -23,7 +23,7 @@ public class LengthFunction implements RuleFunction {
         if (args.size() != 1) {
             throw new RuleEvaluationException("Function 'length' requires exactly 1 argument, got " + args.size());
         }
-        RuleValue arg = args.get(0);
+        RuleValue arg = args.getFirst();
         if (arg.isNull()) {
             throw new RuleEvaluationException("Function 'length' does not accept null");
         }
