@@ -22,7 +22,7 @@ public class UpperFunction implements RuleFunction {
         if (args.size() != 1) {
             throw new RuleEvaluationException("Function 'upper' requires exactly 1 argument, got " + args.size());
         }
-        RuleValue arg = args.get(0);
+        RuleValue arg = args.getFirst();
         if (arg.isNull()) {
             throw new RuleEvaluationException("Function 'upper' does not accept null");
         }
